--- a/index.html
+++ b/index.html
@@ -37,12 +37,12 @@
 <header>
     <div class="container">
         <div class="row">
-            <div class="col-9 col-lg-3">
+            <div class="col-9 col-md-6 col-lg-3 order-1">
                 <a href="#" class="h-logo">
-                    <img src="img/logo.png" alt="">
+                    <img src="img/logo.svg" alt="">
                 </a>
             </div>
-            <div class="col-3 col-lg-5 for-menu">
+            <div class="col-3 col-md-12 col-lg-5 for-menu order-2 order-md-4 order-lg-2">
                 <button class="h-mob-menu js-menu-but">
                     <span></span><span></span><span></span>
                 </button>
@@ -63,10 +63,10 @@
                     </ul>
                 </nav>
             </div>
-            <div class="col-6 col-lg-3">
+            <div class="col-6 col-md-4 col-lg-3 order-3 order-md-2 order-lg-3">
                 <a href="#" class="h-btn">Control panel</a>
             </div>
-            <div class="col-6 col-lg-1">
+            <div class="col-6 col-md-2 col-lg-1 order-4 order-md-3 order-lg-4">
                 <div class="h-lang">
                     <div class="h-lang-cur js-lang-cur"><img src="img/lang.png" alt=""></div>
                     <div class="h-lang-hidden js-lang-pop js-mCSB">
@@ -106,7 +106,7 @@
                     Cloud Access</br>Control System
                    </div>
                    <div class="main-text">
-                       keypass.cloud is an access control system consisting of a</br> hardware device and cloud software. There is a controller to</br> be installed at every access point you can imagine. And</br> there is a cloud control web panel to be accessed from</br> wherever you are and whatever device you use. The system</br> is a convenient tool for security guards, office managers, and</br> administrators.
+                       keypass.cloud is an access control system consisting of a hardware device and cloud software. There is a controller to be installed at every access point you can imagine. And there is a cloud control web panel to be accessed from wherever you are and whatever device you use. The system is a convenient tool for security guards, office managers, and administrators.
                    </div>
                </div>
                <div class="col-lg-6">
