--- a/partners.html
+++ b/partners.html
@@ -37,12 +37,12 @@
 <header>
     <div class="container">
         <div class="row">
-            <div class="col-9 col-lg-3">
+            <div class="col-9 col-md-6 col-lg-3 order-1">
                 <a href="#" class="h-logo">
-                    <img src="img/logo.png" alt="">
+                    <img src="img/logo.svg" alt="">
                 </a>
             </div>
-            <div class="col-3 col-lg-5 for-menu">
+            <div class="col-3 col-md-12 col-lg-5 for-menu order-2 order-md-4 order-lg-2">
                 <button class="h-mob-menu js-menu-but">
                     <span></span><span></span><span></span>
                 </button>
@@ -63,10 +63,10 @@
                     </ul>
                 </nav>
             </div>
-            <div class="col-6 col-lg-3">
+            <div class="col-6 col-md-4 col-lg-3 order-3 order-md-2 order-lg-3">
                 <a href="#" class="h-btn">Control panel</a>
             </div>
-            <div class="col-6 col-lg-1">
+            <div class="col-6 col-md-2 col-lg-1 order-4 order-md-3 order-lg-4">
                 <div class="h-lang">
                     <div class="h-lang-cur js-lang-cur"><img src="img/lang.png" alt=""></div>
                     <div class="h-lang-hidden js-lang-pop js-mCSB">
@@ -137,7 +137,7 @@
                         </div>
                     </form>
                 </div>
-                <div class="col-12 col-lg-6">
+                <div class="col-12 col-lg-6 d-none d-md-block">
                     <div class="page_partners-img">
                         <img src="img/ppi.png" alt="">
                     </div>
