--- a/subscription.html
+++ b/subscription.html
@@ -39,7 +39,7 @@
         <div class="row">
             <div class="col-9 col-lg-3">
                 <a href="#" class="h-logo">
-                    <img src="img/logo.png" alt="">
+                    <img src="img/logo.svg" alt="">
                 </a>
             </div>
             <div class="col-3 col-lg-5 for-menu">
