--- a/cloud.html
+++ b/cloud.html
@@ -167,7 +167,7 @@
                 <div class="page_cloud-connect-scheme-top">
                     <div class="page_cloud-connect-scheme-tumb">
                         <span class="lbl">Wi-fi</span>
-                        <input type="checkbox" class="iswifi" id="iswifi">
+                        <input type="checkbox" class="iswifi" id="iswifi" checked>
                         <label for="iswifi">
                             <span class="txt">on</span>
                             <span class="circle"></span>
@@ -185,37 +185,37 @@
                     </div>
                 </div>
                 <div class="page_cloud-connect-scheme-img">
-                    <img src="img/scheme.jpg" alt="" class="js-scheme-img" style="visibility: visible;">
-                    <img src="img/scheme2.jpg" alt="" class="js-scheme-img2" style="visibility: hidden;">
+                    <img src="img/scheme.jpg" alt="" class="js-scheme-img" style="visibility: hidden;">
+                    <img src="img/scheme2.jpg" alt="" class="js-scheme-img2" style="visibility: visible;">
                     <div class="page_cloud-connect-scheme-bl" style=" top: 0; left: 0;">
                         <div class="image"><img src="img/sch1.png" alt=""></div>
                         <div class="ttl">Door sensor</div>
                     </div>
-                    <div class="page_cloud-connect-scheme-bl" style=" top: 0; left: 39.2%; width: 182px;">
+                    <div class="page_cloud-connect-scheme-bl" style="top: 0;left: 36.2%;width: 182px;">
                         <div class="image"><img src="img/sch2.png" alt=""></div>
                         <div class="ttl">Internet router/switch</div>
                     </div>
-                    <div class="page_cloud-connect-scheme-bl" style=" top: 0; left: 89%;">
+                    <div class="page_cloud-connect-scheme-bl" style="top: 0;left: 88%;">
                         <div class="image"><img src="img/sch3.png" alt=""></div>
                         <div class="ttl">Fire alarm</div>
                     </div>
-                    <div class="page_cloud-connect-scheme-bl" style=" top: 40%; left: 0%;">
+                    <div class="page_cloud-connect-scheme-bl" style="top: 40%;left: 0%;">
                         <div class="image"><img src="img/sch4.png" alt=""></div>
                         <div class="ttl">DC power 12V</div>
                     </div>
-                    <div class="page_cloud-connect-scheme-bl" style=" top: 40%; left: 39.2%; width: 182px;">
+                    <div class="page_cloud-connect-scheme-bl" style="top: 40%;left: 36.5%;width: 182px;">
                         <div class="image"><img src="img/sch5.png" alt=""></div>
-                        <div class="ttl js-iswifi-change" data-ifnone="Controller" data-ifis="keypass.cloud Controller">Controller</div>
+                        <div class="ttl">Controller</div>
                     </div>
                     <div class="page_cloud-connect-scheme-bl" style=" top: 79%; left: 0%;">
                         <div class="image"><img src="img/sch6.png" alt=""></div>
-                        <div class="ttl">Reader #2</div>
+                        <div class="ttl">Reader #1</div>
                     </div>
-                    <div class="page_cloud-connect-scheme-bl" style=" top: 79%; left: 39.2%; width: 182px;">
+                    <div class="page_cloud-connect-scheme-bl" style="top: 79%;left: 34.6%; width: 201px;">
                         <div class="image"><img src="img/sch7.png" alt=""></div>
-                        <div class="ttl js-iswifi-change" data-ifnone="Electromechanical lock 12V" data-ifis="Electromagnetic lock 12V">Electromechanical lock 12V</div>
+                        <div class="ttl js-iswifi-change" data-ifnone="Electromechanical lock 12V" data-ifis="Electromagnetic lock 12V">Electromagnetic lock 12V</div>
                     </div>
-                    <div class="page_cloud-connect-scheme-bl" style=" top: 79%; left: 89%;">
+                    <div class="page_cloud-connect-scheme-bl" style=" top: 79%; left: 88%; width: 82px;">
                         <div class="image js-isexit-change-img" data-ifnone="img/sch6.png" data-ifis="img/sch8.png"><img src="img/sch6.png" alt=""></div>
                         <div class="ttl js-isexit-change-txt" data-ifnone="Reader #2" data-ifis="Exit button">Reader #2</div>
                     </div>
