--- a/cloud.html
+++ b/cloud.html
@@ -219,6 +219,9 @@
                         <div class="image js-isexit-change-img" data-ifnone="img/sch6.png" data-ifis="img/sch8.png"><img src="img/sch6.png" alt=""></div>
                         <div class="ttl js-isexit-change-txt" data-ifnone="Reader #2" data-ifis="Exit button">Reader #2</div>
                     </div>
+                    <div class="page_cloud-connect-scheme-wgnd js-isexit-wgnd" >
+                        <img src="img/wgnd.jpg" alt="">
+                    </div>
                 </div>
             </div>
         </div>
